# semantic-query

./: ._chat_hist  .env.local.example  .gitignore  Cargo.toml  README.md  STREAMING_DISPLAY_NOTES.md  TEST_RUNNER_README.md  extreme_todo_1.md  extreme_todo_2.md
examples/: bedrock_stream_demo.rs  buffered_agent_demo.rs  claude_providers_demo.rs  debug_deepseek_stream.rs  deepseek_agent_stream_demo.rs  doc_comment_test.rs  flexible_client_demo.rs  improved_agent_demo.rs  json_stream_coords_demo.rs  readme_demo.rs  readme_demo_streaming.rs  resolver_v2_demo.rs  rich_schema_demo.rs  schema_demo.rs  semantic_stream_demo.rs  semantic_stream_resolver_demo.rs  simple_agent_stream_demo.rs  stream_parser_stress.rs
examples/first_class_prompts/: Cargo.toml
examples/first_class_prompts/examples/: demo.rs
examples/first_class_prompts/src/: lib.rs
src/: claude.rs  client.rs  config.rs  core.rs  deepseek.rs  error.rs  json_utils.rs  lib.rs  resolver_v2.rs  semantic.rs  streaming.rs  test_utils.rs
src/clients/: claude.rs  deepseek.rs  deepseek_models.rs  flexible.rs  mock.rs  mod.rs  openai.rs  openai_models.rs
src/clients/chatgpt/: mod.rs  models.rs
src/clients/chatgpt/providers/: azure.rs  mod.rs  openai.rs
src/clients/claude/: config.rs  mod.rs  models.rs
src/clients/claude/providers/: README.md  anthropic.rs  bedrock.rs  mod.rs  vertex.rs
src/clients/deepseek/: mod.rs  models.rs
src/clients/openai/: models.rs
src/interceptors/: file.rs  mod.rs
tests/: deepseek_demo_simulation_test.rs  deepseek_live.rs  integration_tests.rs  json_extract_tests.rs  sse_aggregator_tests.rs  stream_parser_tests.rs  streaming_text_deletion_test.rs  test_utils.rs
