[package]
name = "semantic-query"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
tracing = "0.1"
regex = "1.0"
dotenvy = "0.15"
schemars = "0.8"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
tracing-subscriber = "0.3"
divan = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]