[package]
name = "semantic-query"
version = "0.1.1"
edition = "2021"
description = "AI-powered schema validation with automatic JSON generation for type-safe responses"
license = "MIT"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
tracing = "0.1"
dotenvy = "0.15"
schemars = { version = "1.0.4", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
divan = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
futures-core = "0.3"

[dev-dependencies]
