[package]
name = "semantic-query"
version = "0.2.0"
edition = "2021"
description = "AI-powered schema validation with automatic JSON generation for type-safe responses"
license = "MIT"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
tracing = "0.1"
dotenvy = "0.15"
schemars = { version = "1.0.4", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }

# Optional AWS SDK for Bedrock (feature-gated)
aws-config = { version = "1", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }

[dev-dependencies]

[features]
default = ["anthropic", "deepseek"]
anthropic = []
bedrock = []
deepseek = []
aws-bedrock-sdk = ["aws-config", "aws-sdk-bedrockruntime", "aws-smithy-types", "bedrock"]
